Modifica resultadoBusqueda()